# rsomics-bed-maskfasta

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: genome.fa  mask_hard.expected  mask_mc.expected  mask_soft.expected  regions.bed
