[package]
name = "rsomics-bed-maskfasta"
version = "0.1.0"
description = "Mask FASTA bases overlapping BED intervals — bedtools maskfasta equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed-maskfasta"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "maskfasta", "bioinformatics", "bedtools", "genomics"]

[[bin]]
name = "rsomics-bed-maskfasta"
path = "src/main.rs"

[lib]
name = "rsomics_bed_maskfasta"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
